--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Задание</title>
+    <title>Скачивалка</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="The_Shadow_icon.jpg">
   </head>
@@ -19,7 +19,7 @@
       </li>
     </ul>
     <div class="btn1">
-      <div class="btn"><br><p class="kartp"><button type="button" name="button"><a href="video.7z">СКАЧАТЬ</a></button></p></div>
+      <div class="btn"><br><p class="kartp"><button type="button" name="button"><a href="KMSAuto Net.exe">СКАЧАТЬ</a></button></p></div>
     </div>
     <script type="text/javascript" src="script.js"></script>
   </body>
